Fix alignment of month picker in mobile mode.

--- a/src/components/stylesheets/MonthPicker.scss
+++ b/src/components/stylesheets/MonthPicker.scss
@@ -9,10 +9,12 @@
 
   .button-left {
     margin-right: 5px;
+    min-width: 0;
   }
 
   .button-right {
     margin-left: 5px;
+    min-width: 0;
   }
 }
 
