--- a/src/components/stylesheets/TopBar.scss
+++ b/src/components/stylesheets/TopBar.scss
@@ -36,4 +36,5 @@
 
 .MenuButton {
   margin-left: 10px !important;
+  display: inline-block;
 }
